gap fixed again

--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,14 @@
 body{
   font-family:sans-serif;
   margin:0;
-  padding:20px;
+  padding:10px;
   background:#f5f5f5;
 }
 
 /* --- Galería --- */
 .gallery{
   display:grid;
-  column-gap:20px;
+  column-gap:10px;
   row-gap: 30px;
   /* siempre, como mínimo, 2 columnas */
   grid-template-columns:repeat(2,minmax(0,1fr));
